Bug 1602813 - Stop calling -[NSOpenGLContext pixelFormat] because it's not available on 10.9. Instead, inline CreateWithFormat into this callsite. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D56585

--HG--
extra : moz-landing-system : lando